--- a/requirements.txt
+++ b/requirements.txt
@@ -200,3 +200,11 @@ zstandard==0.23.0
 
 fastapi
 uvicorn
+pypdf
+python-docx
+chromadb
+langchain
+langchain-google-genai
+python-dotenv
+camelot-py
+openpyxl
